--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,408 @@
 /* Other rules */
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: #f3f5f5;
+  color: #2e3333;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+* {
+  box-sizing: border-box;
+}
+.Header {
+  background: #fff;
+}
+.Logo {
+  height: 70%;
+}
+.TopBar {
+  height: 60px;
+  border-bottom: 1px solid #e9ebeb;
+}
+
+.container {
+  margin: 0 auto;
+  width: 96vw;
+  height: 100%;
+  max-width: 1200px;
+}
+
+.TopBar-content {
+  height: 100%;
+  align-items: center;
+}
+
+.RestaurantDetails-content,
+.TopBar-content {
+  margin: 0 auto;
+  width: 96vw;
+  max-width: 1200px;
+  display: flex;
+  flex-direction: row;
+}
+.RestaurantDetails-content {
+  padding: 30px 0;
+  align-items: flex-start;
+}
+.RestaurantDetails-text {
+  flex: 1 1;
+  margin-right: 30px;
+}
+.RestaurantDetails-text h1 {
+  font-size: 2rem;
+  margin-top: 0.6rem;
+  margin-bottom: 2rem;
+}
+.RestaurantDetails-text p {
+  color: #868a8a;
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+.RestaurantDetails-picture {
+  width: 350px;
+  border-radius: 5px;
+  overflow: hidden;
+  background: #f3f5f5;
+}
+@media (max-width: 885px) {
+  .RestaurantDetails > .container {
+    margin: 0;
+    width: 100%;
+  }
+  .RestaurantDetails-content {
+    flex-direction: column-reverse;
+    padding: 0;
+    width: 100%;
+  }
+  .RestaurantDetails-picture {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 0;
+  }
+  .RestaurantDetails-text {
+    padding: 30px;
+  }
+  h1 {
+    font-size: 1.5rem !important;
+  }
+  p {
+    font-size: 1rem !important;
+  }
+}
+.RestaurantInfosLoader--center {
+  margin: 0 auto;
+  padding: 30px 0;
+  width: 96vw;
+  max-width: 1200px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+.RestaurantInfosLoader--texts {
+  flex: 1 1;
+}
+.RestaurantInfosLoader--title {
+  background: #f3f5f5;
+  width: 60%;
+  height: 2rem;
+  margin-top: 0.6rem;
+  margin-bottom: 2rem;
+}
+.RestaurantInfosLoader--description {
+  background: #f3f5f5;
+  height: 3rem;
+  width: 90%;
+}
+.RestaurantInfosLoader--cover {
+  width: 350px;
+  height: 150px;
+  border-radius: 5px;
+  overflow: hidden;
+  background: #f3f5f5;
+}
+.Main-content {
+  margin: 0 auto;
+  width: 96vw;
+  max-width: 1200px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+.Cart {
+  width: 350px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+.Cart-content {
+  box-shadow: 0 22px 24px 0 rgba(46, 51, 51, 0.07);
+  background: #fff;
+  border-radius: 4px;
+  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin: 30px 0;
+}
+.Cart-validate-btn {
+  display: block;
+  margin: 10px;
+  border-radius: 5px;
+  padding: 1rem;
+  background: #00cdbd;
+  color: #fff;
+  border: none;
+  font-weight: 700;
+  font-size: 1rem;
+}
+.Cart-validate-btn.disabled {
+  cursor: not-allowed;
+  background: #bac3c3;
+  color: #8b9a9b;
+}
+.Cart-empty {
+  color: #868a8a;
+  text-align: center;
+  padding: 3rem 0;
+}
+.Cart-items {
+  border-bottom: 1px solid #d1d7d7;
+  margin: 0 10px;
+  max-height: calc(100vh - 300px);
+  overflow: auto;
+}
+.Cart-item {
+  display: flex;
+  align-items: flex-start;
+  padding: 1rem 0;
+}
+.Cart-item-quantity {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+  color: #808484;
+}
+.Cart-item-quantity span {
+  min-width: 1rem;
+  text-align: center;
+}
+.Cart-item-price {
+  width: 85px;
+  text-align: right;
+}
+.Cart-item-name {
+  flex: 1 1;
+}
+.Cart-subtotal {
+  margin: 0 10px;
+  padding: 10px 0;
+  border-bottom: 1px solid #d1d7d7;
+}
+.Cart-result-name {
+  flex: 1 1;
+}
+.Cart-subtotal-line {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 0;
+}
+.Cart-total {
+  display: flex;
+  align-items: flex-start;
+  padding: 1.3rem 0;
+  margin: 0 10px;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+@media (max-width: 768px) {
+  .Cart {
+    display: none;
+  }
+}
+.Menu {
+  flex: 1 1;
+  margin-right: 30px;
+  margin-bottom: -25px;
+}
+@media (max-width: 768px) {
+  .Menu {
+    margin-right: 0;
+  }
+}
+.Meals {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  flex-wrap: wrap;
+  margin: 0 -10px;
+}
+@media (max-width: 1124px) {
+  .Meals {
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+}
+.Meal {
+  width: 50%;
+  min-width: 300px;
+  padding: 0 10px 25px;
+}
+.Meal-content {
+  border-radius: 5px;
+  height: 160px;
+  background: #fff;
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  cursor: pointer;
+  transition-duration: 0.3s;
+}
+.Meal-content:hover {
+  box-shadow: 0 22px 24px 0 rgba(46, 51, 51, 0.07);
+}
+.Meal-text {
+  flex: 1 1;
+  margin-right: 15px;
+}
+.Meal-text h3 {
+  font-weight: 400;
+  margin: 0 0 0.5rem;
+}
+.Meal-text p {
+  font-size: 0.9rem;
+  color: #808484;
+  line-height: 1.3rem;
+  height: 2.6rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0 0 1rem;
+}
+.Meal-details {
+  display: flex;
+  align-items: center;
+}
+.Meal-price {
+  color: #808484;
+  font-size: 1.1rem;
+}
+.Meal-popular {
+  color: #ff8000;
+  font-size: 0.8rem;
+  margin-left: 1rem;
+  font-weight: 800;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.Meal-picture {
+  height: 130px;
+  width: 130px;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+}
+.Meal-picture img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+@media (max-width: 1124px) {
+  .Meal {
+    width: 100%;
+  }
+}
+.MenuLoader {
+  flex: 1 1;
+  margin-right: 30px;
+  margin-bottom: -25px;
+}
+.MenuLoader--name {
+  background: #fff;
+  width: 60%;
+  height: 2.5rem;
+  margin: 2rem 0;
+}
+.MenuLoader--items {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  flex-wrap: wrap;
+  margin: 0 -10px;
+}
+.Cart-minus {
+  display: none;
+}
+@media (max-width: 768px) {
+  .ResponsiveCart-container {
+    position: -webkit-sticky;
+    position: sticky;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 20px;
+    box-shadow: 0 -3px 6px -2px rgb(0 0 0/7%);
+  }
+  .ResponsiveCart-details,
+  .ResponsiveCart-container {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+  }
+  .ResponsiveCart-details {
+    width: 100%;
+  }
+
+  .ResponsiveCart-btn {
+    background-color: #822774;
+    padding: 0 15px;
+    cursor: pointer;
+  }
+  .ResponsiveCart-btn,
+  .ResponsiveCart-btn-disabled {
+    height: 60px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    color: #fff;
+    font-weight: 700;
+    border-radius: 4px;
+    border: none;
+  }
+  .ResponsiveCart-btn-disabled {
+    justify-content: center;
+    cursor: pointer;
+    background-color: #d3d3d3;
+    cursor: auto;
+  }
+  .ResponsiveCart-btn:hover {
+    background-color: #8f3c82;
+  }
+  .ResponsiveCart-close {
+    font-weight: 700;
+    height: 20px;
+    width: 20px;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    align-self: flex-end;
+  }
+  .ResponsiveCart-nb-products {
+    height: 30px;
+    width: 30px;
+    background-color: #36054f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
