--- a/src/App.css
+++ b/src/App.css
@@ -338,7 +338,7 @@ code {
   flex-wrap: wrap;
   margin: 0 -10px;
 }
-.Cart-minus {
+.ResponsiveCart-container {
   display: none;
 }
 @media (max-width: 768px) {
@@ -405,4 +405,26 @@ code {
     justify-content: center;
     align-items: center;
   }
+}
+
+.Footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 0;
+}
+
+.Footer > div {
+  width: 375px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 15px;
+  color: gray;
+}
+
+.Footer > div > a {
+  text-decoration: inherit;
+  color: #00cdbd;
+  cursor: pointer;
+  font-weight: 700;
 }
